# halter

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: publish.yml
agent/: Cargo.toml
agent/src/: lib.rs  main.rs
cli/: Cargo.toml
cli/src/: agent.rs  config.rs  lib.rs  main.rs  render.rs
control/: Cargo.toml
control/src/: audit.rs  credentials.rs  lib.rs  providers.rs  registry.rs  tenants.rs  tokens.rs
control/testdata/: github_app_key.pem
docs/superpowers/plans/: 2026-06-06-hackamore-redesign-phase1-spine.md  2026-06-06-halter-redesign-phase1-spine.md  2026-06-12-flavor-trait-catalog-list.md  2026-06-12-policy-lint-test.md
docs/superpowers/specs/: 2026-06-04-hackamore-jit-agent-access-design.md  2026-06-04-halter-jit-agent-access-design.md  2026-06-06-hackamore-generic-egress-enforcer-design.md  2026-06-06-halter-generic-egress-enforcer-design.md  2026-06-12-usability-catalogs-tooling-design.md
examples/: README.md  config.json  policy.reviewer-bot.json
fluorite/: action.fl  audit.fl  control.fl  policy.fl  provision.fl  verdict.fl
gateway/: Cargo.toml
gateway/src/: canonicalize.rs  core.rs  github.rs  lib.rs  normalize.rs  server.rs  service.rs  sigv4.rs  tls.rs  upgrade.rs
gateway/src/flavors/: generic.rs  github.rs  k8s.rs  mod.rs
gateway/src/webui/: app.js  index.html  style.css
gateway/testdata/: tls_ca.pem  tls_cert.pem  tls_key.pem
halter-agent/: Cargo.toml
halter-agent/src/: main.rs
models/: Cargo.toml  build.rs
models/fluorite/: catalog.fl  control.fl  dryrun.fl  lint.fl
models/src/: lib.rs
policy/: Cargo.toml
policy/src/: lib.rs  lint.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: e2e.rs  mint_lint.rs  providers.rs  transports.rs  use_cases.rs  web_ui.rs
