[workspace]
members = [
    "models",
    "policy",
    "control",
    "gateway",
    "cli",
    "agent",
    "tests",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
# Internal crates
hackamore-models = { path = "models" }
hackamore-policy = { path = "policy" }
hackamore-control = { path = "control" }
hackamore-gateway = { path = "gateway" }
hackamore-agent = { path = "agent" }

# Protocol codegen
fluorite         = "0.6.0"
fluorite_codegen = "0.6.0"

# Core
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars   = "1.0"
derive-new = "0.5"
thiserror  = "1.0"
parking_lot = "0.12"
uuid       = { version = "1", features = ["v4"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async / HTTP
tokio   = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "net", "time", "signal", "io-util"] }
axum    = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
bytes   = "1"
http    = "1"

# TLS termination on the proxy listener (optional, config-gated). All of these are already
# in the lock via reqwest's rustls stack, so they add no new download. `ring` is the crypto
# provider (matching reqwest); default features are off to avoid pulling aws-lc-rs.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
hyper        = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util   = { version = "0.1", features = ["server-auto", "tokio", "service"] }
tower        = { version = "0.5", features = ["util"] }
base64       = "0.22"
webpki-roots = "1"

# Crypto (SigV4) — ring is already in the lock via rustls, so this adds no download.
ring = "0.17"

# CLI
clap = { version = "4", features = ["derive"] }

# Test-only
tempfile = "3"

# Production code bans panic-prone constructs; test code opts out per-file via
# #![cfg_attr(test, allow(clippy::unwrap_used, ...))]
[workspace.lints.clippy]
unwrap_used             = "deny"
expect_used             = "deny"
panic                   = "deny"
wildcard_enum_match_arm = "deny"
