[package]
name = "hackamore-agent"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lib]
name = "hackamore_agent"
path = "src/lib.rs"

[[bin]]
name = "hackamore-agent"
path = "src/main.rs"

[dependencies]
hackamore-models = { workspace = true }
reqwest    = { workspace = true }
clap       = { workspace = true }
tokio      = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
