[package]
name = "hackamore"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
description = "JIT, policy-scoped credential proxy for untrusted AI agents"

[lib]
name = "hackamore_cli"
path = "src/lib.rs"

[[bin]]
name = "hackamore"
path = "src/main.rs"

[dependencies]
hackamore-models = { workspace = true }
hackamore-policy = { workspace = true }
hackamore-control = { workspace = true }
hackamore-gateway = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
clap       = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest    = { workspace = true }
http       = { workspace = true }
bytes      = { workspace = true }

[lints]
workspace = true
