[package]
name = "control"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[dependencies]
models      = { workspace = true }
parking_lot = { workspace = true }
uuid        = { workspace = true }
tracing     = { workspace = true }

[lints]
workspace = true
