[package]
name = "gateway"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[dependencies]
models     = { workspace = true }
policy     = { workspace = true }
control    = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
bytes      = { workspace = true }
http       = { workspace = true }
axum       = { workspace = true }
reqwest    = { workspace = true }
tokio      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
