[package]
name = "hackamore-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
description = "Data plane for hackamore: Host-routed, policy-enforcing streaming reverse proxy"

[dependencies]
hackamore-models = { workspace = true }
hackamore-policy = { workspace = true }
hackamore-control = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
bytes      = { workspace = true }
http       = { workspace = true }
axum       = { workspace = true }
reqwest    = { workspace = true }
tokio      = { workspace = true }
ring       = { workspace = true }
tokio-rustls = { workspace = true }
hyper        = { workspace = true }
hyper-util   = { workspace = true }
tower        = { workspace = true }
base64       = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
