[package]
name = "hackamore-models"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
description = "Protocol and contract types for hackamore: Action, Verdict, Policy, audit and mint wire types"

[dependencies]
fluorite   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
schemars   = { workspace = true }
derive-new = { workspace = true }

[build-dependencies]
fluorite_codegen = { workspace = true }

[lints]
workspace = true
