[package]
name = "hackamore-policy"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
description = "Pure policy engine for hackamore: decide(Action, Policy) -> Verdict, no I/O"

[dependencies]
hackamore-models = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
