[package]
name = "hackamore-tests"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

# Test-support crate: no workspace restriction lints so helpers can use unwrap freely.

[dependencies]
hackamore-models = { workspace = true }
hackamore-policy = { workspace = true }
hackamore-control = { workspace = true }
hackamore-gateway = { workspace = true }
hackamore-agent = { workspace = true }
serde_json   = { workspace = true }
http         = { workspace = true }
bytes        = { workspace = true }
axum         = { workspace = true }
reqwest      = { workspace = true }
tokio        = { workspace = true }
tempfile     = { workspace = true }
hyper        = { workspace = true }
hyper-util   = { workspace = true }
